<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/write"
    android:layout_height="match_parent">
   <TableLayout
       android:layout_alignParentBottom="true"
       android:layout_width="match_parent"
       android:stretchColumns="0,1"
       android:id="@+id/payout_btn_box_tl"
       android:layout_height="wrap_content">
       <TableRow>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/button_text_save"
               android:id="@+id/payout_save_button"
               />
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/button_text_cancle"
               android:id="@+id/payout_cancle_button"
               />
       </TableRow>
   </TableLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/payout_btn_box_tl"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/payout_account_book_icon"
                android:id="@+id/payout_select_account_iv"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/payout_select_account_bt"
                android:layout_alignParentRight="true"
                android:text="@string/bottom_text_select_account"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/payout_select_account_bt"
                android:layout_toRightOf="@id/payout_select_account_iv"
                android:focusable="false"
                android:textColor="@color/black"
                android:id="@+id/payout_select_account_et"
                />
        </RelativeLayout>
            <RelativeLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/payout_amount_icon"
                    android:id="@+id/payout_enter_amount_iv"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/payout_enter_amount_bt"
                    android:layout_alignParentRight="true"
                    android:text="@string/payout_enter_amount_text"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/payout_enter_amount_bt"
                    android:layout_toRightOf="@id/payout_enter_amount_iv"
                    android:focusable="false"
                    android:hint="@string/payout_enter_amount_text"
                    android:numeric="decimal"
                    android:maxLength="10"
                    android:textColor="@color/black"
                    android:id="@+id/payout_enter_amount_et"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/payout_category_icon"
                    android:id="@+id/payout_select_category_iv"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/payout_select_category_bt"
                    android:layout_alignParentRight="true"
                    android:text="@string/payout_select_category_text"
                    />
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/payout_select_category_bt"
                    android:layout_toRightOf="@id/payout_select_category_iv"
                    android:hint="@string/payout_select_hint"
                    android:textColor="@color/black"
                    android:id="@+id/payout_select_category_ectv"
                    />
            </RelativeLayout>
            <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/payout_select_date_bt"
                android:layout_alignParentRight="true"
                android:text="@string/payout_date_text_hint"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/payout_select_date_bt"
                android:paddingLeft="30dp"
                android:textSize="25sp"
                android:hint="@string/payout_select_date_text"
                android:focusable="false"
                android:textColor="@color/black"
                android:id="@+id/payout_select_date_et"
                />
        </RelativeLayout>
            <RelativeLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/payout_calculate_type_bt"
                    android:layout_alignParentRight="true"
                    android:text="@string/payout_calculat_text_select"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/payout_calculate_type_bt"
                    android:paddingLeft="30dp"
                    android:hint="@string/payout_calculat_text_hint"
                    android:focusable="false"
                    android:textColor="@color/black"
                    android:id="@+id/payout_calculate_type_et"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/payout_select_people_bt"
                    android:layout_alignParentRight="true"
                    android:text="@string/payout_select_people_text"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/payout_select_people_bt"
                    android:paddingLeft="30dp"
                    android:hint="@string/payout_select_people_text_hint"
                    android:focusable="false"
                    android:textColor="@color/black"
                    android:id="@+id/payout_select_people_et"
                    />
            </RelativeLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/payout_select_people_bt"
                android:paddingLeft="30dp"
                android:lines="5"
                android:maxLength="300"
                android:gravity="fill_horizontal"
                android:hint="@string/payout_select_people_bt_text"
                android:textColor="@color/black"
                android:id="@+id/payout_comment_et"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>