<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:id="@+id/category_main_body_ll"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/textview_text_category_name"
            style="@style/ListViewItemStyle"
            android:layout_height="wrap_content" />

            <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:maxLength="20"
                android:id="@+id/category_name_et"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/ListViewStyle"
            android:text="@string/textview_text_category_parentid"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/category_parentid_sp"
            >
        </Spinner>
    </LinearLayout>
   <TableLayout
       android:layout_alignParentBottom="true"
       android:layout_width="match_parent"
       android:stretchColumns="0,1"
       android:layout_height="wrap_content">
       <TableRow>
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/button_text_save"
               android:id="@+id/category_save_button"
               />
           <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"

               android:text="@string/button_text_cancle"
               android:id="@+id/category_cancle_button"
               />
       </TableRow>
   </TableLayout>
</RelativeLayout>